--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Recipe page</title>
   <link rel="stylesheet" href="receipestyle.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  
   
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="container">
 
         <div class="receipe">
-          <img src="/assets/images/image-omelette.jpeg">
+          <img src="image-omelette.jpeg">
           <h1>Simple Omelette receipe</h1>
           <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
           </p>
